--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,5 +99,17 @@
         app:layout_constraintVertical_bias="0.945"/>
 
 
+    <fragment
+        android:name="edu.umd.scavengerhunt.scavengerhunt.Nav_Bar_frag"
+        android:layout_width="180dp"
+        android:layout_height="63dp"
+        android:layout_weight="1"
+
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </android.support.constraint.ConstraintLayout>
