--- a/app/src/main/res/layout/fragment_nav__bar_frag.xml
+++ b/app/src/main/res/layout/fragment_nav__bar_frag.xml
@@ -20,6 +20,7 @@
         android:id="@+id/profileButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
         android:onClick="gotoProfile"
         app:layout_constraintBottom_toBottomOf="@+id/createButton"
         app:layout_constraintEnd_toStartOf="@+id/searchButton"
@@ -45,6 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:background="@android:color/transparent"
         android:onClick="gotoSearch"
         app:layout_constraintBottom_toBottomOf="@+id/profileButton"
         app:layout_constraintEnd_toEndOf="parent"
@@ -95,6 +97,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:background="@android:color/transparent"
         android:onClick="gotoExplore"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toStartOf="@+id/createButton"
@@ -105,6 +108,7 @@
         android:id="@+id/createButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
         android:onClick="gotoCreate"
         app:layout_constraintBottom_toBottomOf="@+id/exploreButton"
         app:layout_constraintEnd_toStartOf="@+id/profileButton"
